# vanilla_bo_in_highdim

./: README.md  main.py
BenchSuite/: .envrc  LICENSE.md  README.md  main.py  pyproject.toml
BenchSuite/.github/workflows/: deploy.yml
BenchSuite/benchsuite/: __init__.py  benchmark.py  benchmarks.py  contamination.py  labs.py  lasso.py  lunarlander.py  maxsat.py  mopta08.py  mujoco.py  robotpushing.py  rover.py  rover_utils.py  settings.py  svm.py  test_benchmarks.py
BenchSuite/benchsuite/utils/: contamination.py  mujoco.py
BenchSuite/data/maxsat/: frb-frb10-6-4.wcnf
BenchSuite/ebo/azure_tools/: azurepool.py  bo_wrapper.py
BenchSuite/ebo/ebo_core/: bo.py  ebo.py  gibbs.py  mondrian.py  mypool.py
BenchSuite/ebo/gp_tools/: __init__.py  test_gp_solvers.py
BenchSuite/ebo/test_functions/: push_function.py  push_utils.py  rover_function.py  simple_functions.py
benchmarking/: benchsuite_task.py  bosubmit.py  eval_utils.py  external.py  gp_priors.py  lassobench_task.py  mappings.py  mujoco_task.py  scoreboplot.py  synthetic.py
configs/: conf.yaml
configs/acq/: nei.yaml  qlognei.yaml
configs/acq_opt/: highdim.yaml
configs/benchmark/: ant.yaml  hartmann6_100.yaml  hartmann6_1000.yaml  hartmann6_25.yaml  hartmann6_300.yaml  humanoid.yaml  lasso_dna.yaml  levy4_100.yaml  levy4_1000.yaml  levy4_25.yaml  levy4_300.yaml  mopta.yaml  svm.yaml  swimmer.yaml
configs/hydra/launcher/: slurm.yaml
configs/model/: default.yaml  gamma_3_6.yaml  rbf_mle.yaml  with_ops.yaml
recipes/: mujoco_container
